carin-frontend/src/components/start/Start.css
@tailwind base;
@tailwind components;
@tailwind utilities;


* {
    padding: 0;
    margin: 0;
}

html {
    background-color: #FCA1A1;
  }
.fit { /* set relative picture size */
    max-width: 100%;
    max-height: 100%;
}
.center {
    display: block;
    margin: auto;
}

.background {
    position: relative;
    padding: 0;
    margin: 0;
    max-width: 100%;
    max-height: 100%;
    display: block;
    margin: center;
    align-items: center;
}

.background .startbutton {
    position: absolute;
    top: 60%;
    left: 40%;
    display: block;
    margin: auto;
    border: none;
    height: 250px;
    align-items: center;
    


}

.startbuttonpicture {
    object-fit: cover;
    width: 250px;
    height: 250px;
}

